# rfantibody

./: check.point  pyproject.toml  run_api.sh  test_e2e_pipeline.sh  test_full_pipeline.sh  test_rfdiffusion.sh
include/USalign/: HwRMSD  MMalign  NWalign  TMalign  TMscore  USalign  addChainID  cif2pdb  pdb2fasta  pdb2ss  pdb2xyz  pdbAtomName  qTMclust  se  xyz_sfetch
outputs/2025-12-04/18-42-31/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-12-04/18-45-50/.hydra/: config.yaml  hydra.yaml
outputs/2025-12-04/18-49-54/.hydra/: hydra.yaml  overrides.yaml
outputs/2025-12-04/19-30-03/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-12-04/20-03-24/.hydra/: hydra.yaml
outputs/2025-12-04/20-12-58/.hydra/: config.yaml  hydra.yaml  overrides.yaml
scripts/: proteinmpnn_interface_design.py  rf2_predict.py  rfdiffusion_inference.py
scripts/config/: inference
src/rfantibody/api/: __init__.py  job_manager.py  main.py  models.py  pipeline.py
src/rfantibody/rf2/outputs/2025-12-04/20-08-48/.hydra/: config.yaml  hydra.yaml
src/rfantibody/rf2/outputs/2025-12-04/20-15-15/.hydra/: config.yaml  hydra.yaml  overrides.yaml
src/rfantibody/rfdiffusion/: parsers.py
src/rfantibody/rfdiffusion/inference/: ab_util.py
