[tool.poetry]
name = "rfantibody"
version = "1.0.0"
description = "RFantibody - Antibody Design Pipeline"
authors = [
  "Nate Bennett <nrbennett2@gmail.com>",
  "Joe Watchwell <joe.watchwell@gmail.com>"
]
readme = "README.md"
packages = [
{include = "rfantibody", from = "src"},
{include = "include"},
{include = "se3_transformer", from = "include/SE3Transformer"}
]

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = {version = "2.2.1+cu121", source = "pytorch-cu121"}
torchaudio = {version = "2.2.1+cu121", source = "pytorch-cu121"}
torchvision = {version = "0.17.1+cu121", source = "pytorch-cu121"}
torch-utils = "*"
numpy = ">=1.24,<2.0"
hydra-core = "*"
icecream = "*"
opt-einsum = "*"
e3nn = "*"
pyrsistent = "*"
torchdata = "0.7.1"
pydantic = "*"
fastapi = "*"
uvicorn = "*"

# NOTE: DGL must be installed manually after poetry install:
# pip install dgl -f https://data.dgl.ai/wheels/torch-2.2/cu121/repo.html

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pandas = "*"

